--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   font-size: large;
 }
 
+/*
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -30,3 +31,4 @@
     transform: rotate(360deg);
   }
 }
+*/
